--- a/Reakt.Application/Reakt.Application.csproj
+++ b/Reakt.Application/Reakt.Application.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Reakt.Application.Contracts\Reakt.Application.Contracts.csproj" />
     <ProjectReference Include="..\Reakt.Domain\Reakt.Domain.csproj" />
   </ItemGroup>
