DB Initial Migration

--- a/Reakt.Server/appsettings.json
+++ b/Reakt.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ReaktDbConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=Reakt"    
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
