--- a/Reakt.Server/Reakt.Server.csproj
+++ b/Reakt.Server/Reakt.Server.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Reakt.Persistance\Reakt.Persistance.csproj" />
+  </ItemGroup>
+
 
 </Project>
