--- a/Reakt.Application.Tests/Reakt.Application.Tests.csproj
+++ b/Reakt.Application.Tests/Reakt.Application.Tests.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.8" />
     <PackageReference Include="Moq" Version="4.14.6" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
@@ -15,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Reakt.Application\Reakt.Application.csproj" />
+    <ProjectReference Include="..\Reakt.Server\Reakt.Server.csproj" />
   </ItemGroup>
 
 </Project>
