--- a/Reakt.FrontEnd/Properties/launchSettings.json
+++ b/Reakt.FrontEnd/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51634",
-      "sslPort": 44360
+      "applicationUrl": "http://localhost:23295",
+      "sslPort": 44384
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Reakt.Client": {
+    "Reakt.FrontEnd": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
