--- a/Reakt.Server/Reakt.Server.csproj
+++ b/Reakt.Server/Reakt.Server.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Santa\source\repos\Reakt\Reakt.Server\Reakt.Server.xml</DocumentationFile>
+    <DocumentationFile>\Reakt.Server\Reakt.Server.xml</DocumentationFile>
     <PlatformTarget></PlatformTarget>
   </PropertyGroup>
 
