--- a/Reakt.Application.Tests/Reakt.Application.Tests.csproj
+++ b/Reakt.Application.Tests/Reakt.Application.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.14.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.8" />
     <PackageReference Include="Moq" Version="4.14.6" />
