--- a/Reakt.Persistance/Reakt.Persistance.csproj
+++ b/Reakt.Persistance/Reakt.Persistance.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Reakt.Application\Reakt.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
